fix(perc-metadata-services): real-fix javac this-escape, serial, and deprecation warnings (#2307)
Resolve project -Xlint diagnostics in perc-metadata-services (#2041):
final ResourceConfig/entity classes and direct field init (this-escape);
drop unnecessary Serializable on JPA/DTOs (serial); Double.valueOf /
NumberUtils.isCreatable / Objects.toString / String.contains;
Hibernate createMutationQuery + Session.find; LinkedHashMap operators;
remove unused commons-collections; unit tests for structural fixes.

Fixes #2041
Refs #2200

> Co-Authored by Grok Build using grok-4.5 with agent main.